[gd_scene load_steps=5 format=2]

[ext_resource path="res://Escenas/Enemigos/Bala/BalaEnemigos.gd" type="Script" id=1]
[ext_resource path="res://Recursos/Sprite/Tank/Bala.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 6.42652

[sub_resource type="CircleShape2D" id=2]
radius = 6.69667

[node name="Bullet" type="KinematicBody2D" groups=[
"bala_enemigos",
]]
position = Vector2( 0.0898681, 0 )
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 0.52704 )
scale = Vector2( 1, 1.03294 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="." groups=[
"bala",
]]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 0.529459 )
shape = SubResource( 1 )

[node name="ColisionBullet" type="CollisionShape2D" parent="."]
position = Vector2( -1.19209e-07, 0.599561 )
shape = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextEdit" type="TextEdit" parent="CanvasLayer"]
margin_left = 16.0
margin_top = 25.6
margin_right = 154.0
margin_bottom = 62.6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Sale_Bala" type="Timer" parent="."]
wait_time = 0.03
[connection signal="tiempo" from="." to="." method="_on_Bullet_tiempo"]
[connection signal="body_entered" from="Area2D" to="." method="DesaparecerBalaAlColisionar"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="timeout" from="Sale_Bala" to="." method="_on_Sale_Bala_timeout"]
